static/css/general.css
body {
  /*padding-top: 40px;*/
  /*padding-bottom: 40px;*/
  display: flex;
  min-height: 100vh;
  flex-direction: column;
  background: url("../img/UCF_background.jpg") no-repeat center center fixed; 
  background-size: cover;
}

h1,h2,h3,h4,h5,h6{
    word-wrap:break-word;
}

.containter{
}

.footer{
    /*width:73%;*/
    bottom:10px;
    color:yellow;
    /*left:0;*/;
    padding-top:8px;
}

.jumbotron{
    background: rgba(238, 230, 238, 0.9); 
    /*padding-bottom: 100px;*/
    flex:1;
}

.flash.li{
    left: 0;
}

.flash_containter{
    /*footer height + padding - padding of page i used 5 in this case cause i don't know real number*/
    /*margin-bottom: 45px; */
    
}

.error-image{
    padding: 20px;
}

.white{
    color: white;   
}

@media (min-width: 768px) {
  .container {
    max-width: 900px;
  }
}

.list-group-item{
    margin-left: 5%;
    margin-right: 5%;
    border-radius: 25px;
}

.list-group-item {
  position: relative;
  display: block;
  padding: 1px 15px;
  margin-bottom: 10px;
  background-color: #fff;
  border: 1px solid #bbb;
  list-style-type: none;
  padding: 10px 30px 0px 30px;
}

.list-group-item:first-child {
    border-radius: 25px;
}

.list-group-item:last-child {
    border-radius: 25px;
}

.li-link{
    text-decoration: none;
}

.btn-primary {
    color: #fff;
    background-color: #7c6751;
    border-color: #564738;
}

.btn-success{
    background-color: #633626;
    border-color: #552D20;
    color: #fff;
}

.well-sm {
    padding: 0px;
    border-radius: 3px;
    margin: 0px auto;
}


.togglearrow{
    display: inline;

    /*text-align: right;*/
    /*float: right;*/
    /*clear: both;*/
    position: absolute;
    right: 20px;
}

.closemessage{
    display: inline;
    position: absolute;
    left: 20px;
}

.radiobuffer{
    margin: 20px;
}

/*navbar-nav.li{
    color:blue;
}

nav.navbar{
    background: rgba(238, 230, 238, 0.9); 
}*/

 /**/

